--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ sync_box_to_github.sh
 *.json
 !research/service-account-key.json
 !research/real_data_sentiment_analysis_results.json
+node_modules
+.DS_Store
