--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,57 @@
-Flask==2.2.2
+alembic==1.15.1
+attrs==25.1.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+bs4==0.0.2
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+exceptiongroup==1.2.2
+Flask==3.1.0
 Flask-Cors==3.0.10
-Werkzeug==2.2.2
+Flask-JWT-Extended==4.7.1
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+google-api-core==2.24.2
+google-auth==2.38.0
+google-cloud-language==2.17.0
+googleapis-common-protos==1.69.1
+grpcio==1.71.0
+grpcio-status==1.71.0
+h11==0.14.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.9
+MarkupSafe==3.0.2
+numpy==2.2.3
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+proto-plus==1.26.1
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyJWT==2.10.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
+requests==2.32.3
+rsa==4.9
+selenium==4.29.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.38
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
