--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,57 +1,90 @@
 alembic==1.15.1
-attrs==25.1.0
-beautifulsoup4==4.13.3
+annotated-types==0.7.0
+anyio==4.8.0
+beautifulsoup4>=4.10.0
 blinker==1.9.0
-bs4==0.0.2
-cachetools==5.5.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
+blis==1.2.0
+certifi>=2023.7.22
+cffi>=1.15.0
+charset-normalizer>=2.0.0
 click==8.1.8
-exceptiongroup==1.2.2
+cloudpathlib==0.21.0
+colorama>=0.4.4
+confection==0.1.5
+contourpy==1.3.0
+cryptography>=41.0.0
+cycler==0.12.1
+cymem==2.0.11
+distro==1.9.0
+dnspython>=2.3.0
 Flask==3.1.0
-Flask-Cors==3.0.10
+flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
-google-api-core==2.24.2
+fonttools==4.56.0
+google-api-core==2.24.1
 google-auth==2.38.0
 google-cloud-language==2.17.0
-googleapis-common-protos==1.69.1
-grpcio==1.71.0
-grpcio-status==1.71.0
-h11==0.14.0
-idna==3.10
+googleapis-common-protos==1.69.0
+grpcio==1.71.0rc2
+grpcio-status==1.71.0rc2
+httpcore==1.0.7
+httpx==0.28.1
+idna>=3.3
 itsdangerous==2.2.0
-Jinja2==3.1.6
+Jinja2==3.1.5
+jiter==0.9.0
+joblib==1.4.2
+kiwisolver==1.4.7
+langcodes==3.5.0
+language_data==1.3.0
 Mako==1.3.9
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-numpy==2.2.3
-outcome==1.3.0.post0
-packaging==24.2
-pandas==2.2.3
-proto-plus==1.26.1
+matplotlib==3.9.4
+mdurl==0.1.2
+murmurhash==1.0.12
+numpy>=1.24.0
+openai==1.66.2
+pandas>=2.0.0
+pillow==11.1.0
+preshed==3.0.9
+proto-plus==1.26.0
 protobuf==5.29.3
+pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic_core==2.27.2
 PyJWT==2.10.1
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
+pymongo>=4.5.0
+pyparsing==3.2.1
+python-dateutil>=2.8.2
 python-dotenv==1.0.1
-pytz==2025.1
-requests==2.32.3
+pytz>=2022.0
+requests>=2.27.0
+rich==13.9.4
 rsa==4.9
-selenium==4.29.0
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
+scikit-learn==1.6.1
+scipy==1.13.1
+seaborn==0.13.2
+shellingham==1.5.4
+smart-open==7.1.0
+spacy==3.8.3
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 SQLAlchemy==2.0.38
-trio==0.29.0
-trio-websocket==0.12.2
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-webdriver-manager==4.0.2
-websocket-client==1.8.0
+srsly==2.5.1
+thinc==8.3.4
+threadpoolctl==3.5.0
+tqdm==4.67.1
+trio>=0.21.0
+typer==0.15.2
+typing_extensions>=4.5.0
+urllib3>=1.26.0
+wasabi==1.1.3
+weasel==0.4.1
 Werkzeug==3.1.3
-wsproto==1.2.0
+wrapt==1.17.2
