--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,26 @@
 alembic==1.15.1
 annotated-types==0.7.0
 anyio==4.8.0
-beautifulsoup4>=4.10.0
+attrs==25.3.0
+beautifulsoup4==4.13.3
 blinker==1.9.0
 blis==1.2.0
-certifi>=2023.7.22
-cffi>=1.15.0
-charset-normalizer>=2.0.0
+cachetools==5.5.2
+catalogue==2.0.10
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
-colorama>=0.4.4
+colorama==0.4.6
 confection==0.1.5
 contourpy==1.3.0
-cryptography>=41.0.0
+cryptography==44.0.2
 cycler==0.12.1
 cymem==2.0.11
 distro==1.9.0
-dnspython>=2.3.0
+dnspython==2.7.0
+exceptiongroup==1.2.2
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
@@ -29,9 +33,10 @@ google-cloud-language==2.17.0
 googleapis-common-protos==1.69.0
 grpcio==1.71.0rc2
 grpcio-status==1.71.0rc2
+h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
-idna>=3.3
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 jiter==0.9.0
@@ -46,32 +51,43 @@ MarkupSafe==3.0.2
 matplotlib==3.9.4
 mdurl==0.1.2
 murmurhash==1.0.12
-numpy>=1.24.0
+numpy==2.2.3
 openai==1.66.2
-pandas>=2.0.0
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
 preshed==3.0.9
+-e git+https://github.com/Cornell-Data-Strategy/Project-Rest.git@a3e8f55f32b7d7c9bf16649be7116076a703ad38#egg=Project_Rest
 proto-plus==1.26.0
 protobuf==5.29.3
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+Pygments==2.19.1
 PyJWT==2.10.1
-pymongo>=4.5.0
+pymongo==4.11.2
 pyparsing==3.2.1
-python-dateutil>=2.8.2
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz>=2022.0
-requests>=2.27.0
+pytz==2025.1
+requests==2.32.3
 rich==13.9.4
 rsa==4.9
 scikit-learn==1.6.1
 scipy==1.13.1
 seaborn==0.13.2
+selenium==4.29.0
 shellingham==1.5.4
+six==1.17.0
 smart-open==7.1.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
 spacy==3.8.3
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
@@ -80,11 +96,16 @@ srsly==2.5.1
 thinc==8.3.4
 threadpoolctl==3.5.0
 tqdm==4.67.1
-trio>=0.21.0
+trio==0.29.0
+trio-websocket==0.12.2
 typer==0.15.2
-typing_extensions>=4.5.0
-urllib3>=1.26.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
 wasabi==1.1.3
 weasel==0.4.1
+webdriver-manager==4.0.2
+websocket-client==1.8.0
 Werkzeug==3.1.3
 wrapt==1.17.2
+wsproto==1.2.0
