--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-progress": "^1.1.4",
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.3",
     "react": "^19.0.0",
